--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,12 +26,15 @@ python = "^3.6"
 [tool.poetry.dev-dependencies]
 invoke = "^1.4.1"
 black = "^19.10b0"
-yamllint = "^1.23.0"
 bandit = "^1.6.2"
 pylint = "^2.5.2"
-pylint-django = "^2.0.15"
+pylint-django = "~2.3.0"
 pydocstyle = "^5.0.2"
 flake8 = "^3.8.3"
+pytest-django = "^4.1.0"
+toml = "^0.10.2"
+sentry-sdk = "^1.0.0"
+nautobot = "^1.0.0-beta.3"
 
 [tool.black]
 line-length = 120
@@ -67,7 +70,7 @@ no-docstring-rgx="^(_|test_|Meta$)"
 [tool.pylint.messages_control]
 # Line length is enforced by Black, so pylint doesn't need to check it.
 # Pylint and Black disagree about how to format multi-line arrays; Black wins.
-disable = """,
+disable = """
     line-too-long,
     bad-continuation,
     """
@@ -86,4 +89,4 @@ build-backend = "poetry.core.masonry.api"
 [tool.pytest.ini_options]
 python_paths = "./"
 testpaths = "tests/"
-adopts = "-vv"
+addopts = "-vv"
