--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,10 @@
 name: "All CI related tasks"
 
-on: ["push", "pull_request"]
+on:
+  push:
+    branches: ["develop"]
+  pull_request:
+    branches: ["develop"]
 
 jobs:
   linting_unit_testing:
@@ -9,6 +13,7 @@ jobs:
       fail-fast: true
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
+        nautobot-version: [1.0.2, 1.0.3]
     steps:
       - name: "Checkout repo"
         uses: "actions/checkout@v2"
@@ -23,11 +28,6 @@ jobs:
       - name: "Install Python packages"
         run: "poetry install"
       - name: "Build Testing Container"
-        run: "PYTHON_VER=${{ matrix.python-version }} invoke build"
+        run: "PYTHON_VER=${{ matrix.python-version }} NAUTOBOT_VERSION=${{ matrix.nautobot-version }} invoke build"
       - name: "Run All Tests"
-        run: "PYTHON_VER=${{ matrix.python-version }} invoke tests"
-      - name: Publish package if tagged
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-        uses: JRubics/poetry-publish@v1
-        with:
-          pypi_token: ${{ secrets.PYPI_TOKEN }}
+        run: "PYTHON_VER=${{ matrix.python-version }} NAUTOBOT_VERSION=${{ matrix.nautobot-version }} invoke tests"
