--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -1,34 +1,13 @@
+ARG PYTHON_VER
+ARG NAUTOBOT_VER
+# Switching to ghcr.io image for now so we don't hit dockerhub rate limit.
+FROM ghcr.io/nautobot/nautobot-dev:${NAUTOBOT_VER}-py${PYTHON_VER}
+# FROM networktocode/nautobot-dev:${NAUTOBOT_VER}-py${PYTHON_VER}
 
-ARG python_ver=3.7
-FROM python:${python_ver}-slim
-
-ARG nautobot_root=/opt/nautobot
-ENV PYTHONUNBUFFERED 1
-ENV NAUTOBOT_ROOT ${nautobot_root}
-
-WORKDIR ${NAUTOBOT_ROOT}
-
-RUN apt-get update && \
-    apt-get upgrade -y && \
-    apt-get install --no-install-recommends -y git mime-support && \
-    apt-get autoremove -y && \
-    apt-get clean all && \
-    rm -rf /var/lib/apt/lists/* && \
-    pip --no-cache-dir install --upgrade pip wheel
-
-# Upgrade pip and install poetry as well as configure poetry
-RUN pip install --upgrade pip\
-    && pip install poetry \
-    && poetry config virtualenvs.create false
-
-# -------------------------------------------------------------------------------------
-# Install Nautobot Plugin
-# -------------------------------------------------------------------------------------
 WORKDIR /source
 
 # Copy in only pyproject.toml/poetry.lock to help with caching this layer if no updates to dependencies
 COPY poetry.lock pyproject.toml /source/
-
 # --no-root declares not to install the project package since we're wanting to take advantage of caching dependency installation
 # and the project is copied in and installed after this step
 RUN poetry install --no-interaction --no-ansi --no-root
@@ -37,9 +16,4 @@ RUN poetry install --no-interaction --no-ansi --no-root
 COPY . /source
 RUN poetry install --no-interaction --no-ansi
 
-# Used if someone wants to override the entrypoint and provision a super user
-COPY development/docker-entrypoint.sh /tmp/nautobot/docker-entrypoint.sh
-
-WORKDIR ${NAUTOBOT_ROOT}
-
-ENTRYPOINT ["/tmp/nautobot/docker-entrypoint.sh"]
+COPY development/nautobot_config.py /opt/nautobot/nautobot_config.py
