--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,9 +2,8 @@
 name: Deploy to PyPi
 on:
   release:
-    types: [created]
-  workflow_run:
-    workflows: ["Main tests"]
+    types:
+      - published
 
 jobs:
   publish:
