--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: true
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
-        nautobot-version: [1.0.2, 1.0.3]
+        nautobot-version: [1.1.0b2]
     steps:
       - name: "Checkout repo"
         uses: "actions/checkout@v2"
