--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -1,9 +1,22 @@
-ARG PYTHON_VER
-ARG NAUTOBOT_VER
-# Switching to ghcr.io image for now so we don't hit dockerhub rate limit.
+ARG NAUTOBOT_VER="1.1.0-beta.2"
+ARG PYTHON_VER=3.8
 FROM ghcr.io/nautobot/nautobot-dev:${NAUTOBOT_VER}-py${PYTHON_VER}
-# FROM networktocode/nautobot-dev:${NAUTOBOT_VER}-py${PYTHON_VER}
 
+ENV prometheus_multiproc_dir=/prom_cache
+
+ARG NAUTOBOT_ROOT=/opt/nautobot
+
+ENV NAUTOBOT_ROOT ${NAUTOBOT_ROOT}
+
+WORKDIR $NAUTOBOT_ROOT
+
+# Configure poetry
+RUN poetry config virtualenvs.create false \
+    && poetry config installer.parallel false
+
+# -------------------------------------------------------------------------------------
+# Install Nautobot Plugin
+# -------------------------------------------------------------------------------------
 WORKDIR /source
 
 # Copy in only pyproject.toml/poetry.lock to help with caching this layer if no updates to dependencies
@@ -16,4 +29,4 @@ RUN poetry install --no-interaction --no-ansi --no-root
 COPY . /source
 RUN poetry install --no-interaction --no-ansi
 
-COPY development/nautobot_config.py /opt/nautobot/nautobot_config.py
+COPY development/nautobot_config.py ${NAUTOBOT_ROOT}/nautobot_config.py
