Adds `expired` as a filter on to the REST API.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ no-docstring-rgx="^(_|test_|Meta$)"
 disable = """
     line-too-long,
     bad-continuation,
+    duplicate-code,
     """
 
 [tool.pylint.miscellaneous]
