--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6.2"
+python = "^3.7"
 nautobot = "v1.1.0b2"
 
 [tool.poetry.extras]
@@ -36,6 +36,8 @@ toml = "^0.10.2"
 sentry-sdk = "^1.0.0"
 django-debug-toolbar = "^3.2.1"
 coverage = "^5.5"
+django-extensions = "^3.1.3"
+ipython = "^7.26.0"
 
 [tool.black]
 line-length = 120
