Adds GraphQL endpoints and basic cleanup.

--- a/development/dev.env
+++ b/development/dev.env
@@ -17,7 +17,7 @@ SUPERUSER_EMAIL=admin@example.com
 SUPERUSER_NAME=admin
 
 EMAIL_FROM=nautobot@example.com
-EMAIL_PASSWORD=
+EMAIL_PASSWORD=notverysecurepassword
 EMAIL_PORT=25
 EMAIL_SERVER=localhost
 EMAIL_TIMEOUT=5
