--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.6.2"
-nautobot = "v1.1.0b2"
+nautobot = "^v1.0.3"
 
 [tool.poetry.extras]
 nautobot = ["nautobot"]
