--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.6.2"
 nautobot = "^v1.0.3"
+pycountry = "^20.7.3"
 
 [tool.poetry.extras]
 nautobot = ["nautobot"]
