--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ django-debug-toolbar = "^3.2.1"
 coverage = "^5.5"
 django-extensions = "^3.1.3"
 ipython = "7.16.0"
+time-machine = "^2.4.0"
 
 [tool.black]
 line-length = 120
