--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,11 @@
 [tool.poetry]
 name = "nautobot-device-lifecycle-mgmt"
-version = "0.1.0-beta.0"
+version = "0.2.1"
 description = "Manages device lifecycles for platforms and software."
-authors = ["Mikhail Yohman <mikhail.yohman@gmail.com>"]
+authors = [
+    "Josh Silvas <josh.silvas@networktocode.com>",
+    "Przemek Rogala <przemek.rogala@networktocode.com>",
+]
 license = "Apache-2.0"
 readme = "README.md"
 homepage = "https://github.com/networktocode-llc/nautobot-plugin-device-lifecycle-mgmt"
