--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.6.", "3.7", "3.8", "3.9"]
+        python-version: ["3.7", "3.8", "3.9"]
         nautobot-version: ["1.1.3"]
     env:
       INVOKE_NAUTOBOT_DEVICE_LIFECYCLE_MGMT_PYTHON_VER: "${{ matrix.python-version }}"
@@ -146,7 +146,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9"]
+        python-version: ["3.7", "3.8", "3.9"]
         nautobot-version: ["1.1.3"]
     runs-on: "ubuntu-20.04"
     env:
