Breaks up DB backends in docker dev environments. Adds support for MySQL in the development environment. Backend for invoke is determined based on the `NAUTOBOT_DB_ENGINE` variable in `development/dev.env`

--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -8,6 +8,8 @@ ARG NAUTOBOT_ROOT=/opt/nautobot
 
 ENV NAUTOBOT_ROOT ${NAUTOBOT_ROOT}
 
+RUN apt-get update && apt-get install -y gcc libmariadb-dev-compat libmariadb-dev
+
 WORKDIR $NAUTOBOT_ROOT
 
 # Configure poetry
