--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ coverage = "^5.5"
 django-extensions = "^3.1.3"
 ipython = "7.16.0"
 time-machine = "^2.4.0"
+mysqlclient = "^2.0.3"
+python-dotenv = "^0.19.1"
 
 [tool.black]
 line-length = 120
