--- a/development/docker-compose.mysql.yml
+++ b/development/docker-compose.mysql.yml
@@ -14,8 +14,8 @@ services:
     ports:
       - "3306:3306"
     healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-      timeout: 20s
-      retries: 10
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: "20s"
+      retries: "10"
 volumes:
-  lcm_mysql_data:
+  lcm_mysql_data:  # yamllint disable-line rule:empty-values
