--- a/development/docker-compose.postgres.yml
+++ b/development/docker-compose.postgres.yml
@@ -13,9 +13,9 @@ services:
       - "127.0.0.1:5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
+      interval: "10s"
+      timeout: "5s"
+      retries: "10"
 
 volumes:
   postgres_data: {}
