Update dev files for testing.

--- a/development/dev.env
+++ b/development/dev.env
@@ -27,10 +27,10 @@ NAUTOBOT_DB_USER=nautobot
 NAUTOBOT_DB_TIMEOUT=300
 
 # Uncomment the environment variables that related to your DB backend.
-# NAUTOBOT_DB_ENGINE=django.db.backends.postgresql
-# NAUTOBOT_DB_PORT=5432
-NAUTOBOT_DB_ENGINE=django.db.backends.mysql
-NAUTOBOT_DB_PORT=3306
+NAUTOBOT_DB_ENGINE=django.db.backends.postgresql
+NAUTOBOT_DB_PORT=5432
+# NAUTOBOT_DB_ENGINE=django.db.backends.mysql
+# NAUTOBOT_DB_PORT=3306
 
 # Needed for Postgres should match the values for Nautobot above
 POSTGRES_DB=nautobot
