--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.6.2"
 pycountry = "^20.7.3"
+matplotlib = "3.3.2"
 
 [tool.poetry.extras]
 nautobot = ["nautobot"]
