--- a/development/docker-compose.postgres.yml
+++ b/development/docker-compose.postgres.yml
@@ -15,7 +15,7 @@ services:
       test: ["CMD-SHELL", "pg_isready"]
       interval: "10s"
       timeout: "5s"
-      retries: "10"
+      retries: 10
 
 volumes:
   postgres_data: {}
