--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.6.2"
 pycountry = "^20.7.3"
-matplotlib = "3.3.2"
+matplotlib = "^3.3.4"
 
 [tool.poetry.extras]
 nautobot = ["nautobot"]
@@ -43,6 +43,7 @@ coverage = "^5.5"
 django-extensions = "^3.1.3"
 ipython = "7.16.0"
 time-machine = "^2.4.0"
+yamllint = "^1.26.3"
 
 [tool.black]
 line-length = 120
