--- a/development/dev.env
+++ b/development/dev.env
@@ -13,9 +13,10 @@ NAUTOBOT_ROOT=/opt/nautobot
 
 # Redis Configuration Environment Variables
 REDIS_HOST=redis
-REDIS_PORT=6379
+NAUTOBOT_REDIS_HOST="$REDIS_HOST"
+NAUTOBOT_REDIS_PORT=6379
 # Uncomment REDIS_SSL if using SSL
-# REDIS_SSL=True
+# NAUTOBOT_REDIS_SSL=True
 
 SUPERUSER_EMAIL=admin@example.com
 SUPERUSER_NAME=admin
