Update to celery worker for Nautobot v1.2

--- a/development/docker-compose.base.yml
+++ b/development/docker-compose.base.yml
@@ -26,12 +26,10 @@ services:
     <<: *nautobot-build
     <<: *nautobot-base
   worker:
-    entrypoint: "nautobot-server rqworker"
+    entrypoint: "nautobot-server celery worker -B -l INFO"
     depends_on:
       nautobot:
         condition: "service_started"
-      db:
-        condition: "service_healthy"
     healthcheck:
       disable: true
     <<: *nautobot-base
