--- a/development/dev.env
+++ b/development/dev.env
@@ -2,7 +2,7 @@
 # DEV File: Store environment information. NOTE: Secrets NOT stored here!
 ################################################################################
 # Nautobot Configuration Environment Variables
-DEBUG=True
+DEBUG=False
 ALLOWED_HOSTS=*
 BANNER_TOP="Local"
 CHANGELOG_RETENTION=0
@@ -13,7 +13,7 @@ NAUTOBOT_ROOT=/opt/nautobot
 
 # Redis Configuration Environment Variables
 REDIS_HOST=redis
-NAUTOBOT_REDIS_HOST="$REDIS_HOST"
+NAUTOBOT_REDIS_HOST=${REDIS_HOST}
 NAUTOBOT_REDIS_PORT=6379
 # Uncomment REDIS_SSL if using SSL
 # NAUTOBOT_REDIS_SSL=True
