Revert DEBUG back to True

--- a/development/dev.env
+++ b/development/dev.env
@@ -2,7 +2,7 @@
 # DEV File: Store environment information. NOTE: Secrets NOT stored here!
 ################################################################################
 # Nautobot Configuration Environment Variables
-DEBUG=False
+DEBUG=True
 ALLOWED_HOSTS=*
 BANNER_TOP="Local"
 CHANGELOG_RETENTION=0
