--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ time-machine = "^2.4.0"
 yamllint = "^1.26.3"
 mysqlclient = "^2.0.3"
 python-dotenv = "^0.19.1"
+Markdown = "3.3.4"
 
 [tool.black]
 line-length = 120
