--- a/development/dev.env
+++ b/development/dev.env
@@ -15,7 +15,7 @@ NAUTOBOT_ROOT=/opt/nautobot
 REDIS_HOST=redis
 NAUTOBOT_REDIS_HOST=${REDIS_HOST}
 NAUTOBOT_REDIS_PORT=6379
-# Uncomment REDIS_SSL if using SSL
+# Uncomment NAUTOBOT_REDIS_SSL if using SSL
 # NAUTOBOT_REDIS_SSL=True
 
 SUPERUSER_EMAIL=admin@example.com
