--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,7 @@
 name = "nautobot-device-lifecycle-mgmt"
 version = "0.4.1"
 description = "Manages device lifecycles for platforms and software."
-authors = [
-    "Josh Silvas <josh.silvas@networktocode.com>",
-    "Przemek Rogala <przemek.rogala@networktocode.com>",
-]
+authors = ["Network to Code, LLC <opensource@networktocode.com>"]
 license = "Apache-2.0"
 readme = "README.md"
 homepage = "https://github.com/networktocode-llc/nautobot-plugin-device-lifecycle-mgmt"
