--- a/development/docker-compose.base.yml
+++ b/development/docker-compose.base.yml
@@ -25,11 +25,29 @@ services:
         condition: "service_healthy"
     <<: *nautobot-build
     <<: *nautobot-base
-  worker:
-    entrypoint: "nautobot-server celery worker -B -l INFO"
+  celery_worker:
+    entrypoint:
+      - "sh"
+      - "-c"  # this is to evaluate the $NAUTOBOT_LOG_LEVEL from the env
+      - "nautobot-server celery worker -l $$NAUTOBOT_LOG_LEVEL"  # $$ because of docker-compose
     depends_on:
-      nautobot:
-        condition: "service_started"
+      - "nautobot"
+      - "redis"
+    healthcheck:
+      interval: "30s"
+      timeout: "10s"
+      start_period: "30s"
+      retries: 3
+      test: ["CMD", "bash", "-c", "nautobot-server celery inspect ping --destination celery@$$HOSTNAME"]  ## $$ because of docker-compose
+    <<: *nautobot-base
+  celery_beat:
+    entrypoint:
+      - "sh"
+      - "-c"
+      - "nautobot-server celery beat -l $$NAUTOBOT_LOG_LEVEL"  # this is to evaluate the $NAUTOBOT_LOG_LEVEL from the env
     healthcheck:
       disable: true
+    depends_on:
+      - "nautobot"
+      - "redis"
     <<: *nautobot-base
