--- a/development/docker-compose.dev.yml
+++ b/development/docker-compose.dev.yml
@@ -6,11 +6,15 @@
 version: "3.4"
 services:
   nautobot:
-    command: "nautobot-server runserver 0.0.0.0:8080 --nothreading"
+    command: "nautobot-server runserver 0.0.0.0:8080 --nothreading --insecure"
     volumes:
       - "./nautobot_config.py:/opt/nautobot/nautobot_config.py"
       - "../:/source"
-  worker:
+  celery_worker:
+    volumes:
+      - "./nautobot_config.py:/opt/nautobot/nautobot_config.py"
+      - "../:/source"
+  celery_beat:
     volumes:
       - "./nautobot_config.py:/opt/nautobot/nautobot_config.py"
       - "../:/source"
