--- a/development/dev.env
+++ b/development/dev.env
@@ -2,7 +2,6 @@
 # DEV File: Store environment information. NOTE: Secrets NOT stored here!
 ################################################################################
 # Nautobot Configuration Environment Variables
-DEBUG=True
 ALLOWED_HOSTS=*
 BANNER_TOP="Local"
 CHANGELOG_RETENTION=0
@@ -10,6 +9,14 @@ MAX_PAGE_SIZE=0
 METRICS_ENABLED=True
 NAPALM_TIMEOUT=5
 NAUTOBOT_ROOT=/opt/nautobot
+
+NAUTOBOT_DEBUG=True
+NAUTOBOT_DJANGO_EXTENSIONS_ENABLED=True
+NAUTOBOT_DJANGO_TOOLBAR_ENABLED=True
+NAUTOBOT_LOG_LEVEL=DEBUG
+NAUTOBOT_METRICS_ENABLED=True
+NAUTOBOT_NAPALM_TIMEOUT=5
+NAUTOBOT_MAX_PAGE_SIZE=0
 
 # Redis Configuration Environment Variables
 REDIS_HOST=redis
