Update filterset and serializers base classes. Update pytest settings.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ disable = """
     bad-continuation,
     duplicate-code,
     too-many-lines,
+    too-many-ancestors,
     """
 
 [tool.pylint.miscellaneous]
