Pipeline and project housekeeping updates. (#100)
* Pipeline and project housekeeping updates.

* Add stable Nautobot to CI. Update Dockerfile.

* Updates/fixes to API serializers, filters and unit tests.

* Update filterset and serializers base classes. Update pytest settings.

--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -1,6 +1,9 @@
-ARG NAUTOBOT_VER="1.1.6"
+ARG NAUTOBOT_VER="1.2.11"
 ARG PYTHON_VER=3.8
 FROM ghcr.io/nautobot/nautobot-dev:${NAUTOBOT_VER}-py${PYTHON_VER}
+
+# Make the value available after the FROM directive
+ARG NAUTOBOT_VER
 
 ENV prometheus_multiproc_dir=/prom_cache
 
@@ -19,16 +22,28 @@ RUN poetry config virtualenvs.create false \
 # -------------------------------------------------------------------------------------
 # Install Nautobot Plugin
 # -------------------------------------------------------------------------------------
-WORKDIR /source
+WORKDIR /tmp/install
 
 # Copy in only pyproject.toml/poetry.lock to help with caching this layer if no updates to dependencies
-COPY poetry.lock pyproject.toml /source/
+COPY poetry.lock pyproject.toml /tmp/install/
+
+# Add the requested Nautobot version to pyproject
+# to install the correct version based on the NAUTOBOT_VER argument
+# Otherwise Poetry will override the version in this container
+# with the one in the poetry.lock
+RUN if [ "$NAUTOBOT_VER" = "stable" ]; \
+    then poetry add nautobot@latest; \
+    else poetry add nautobot==${NAUTOBOT_VER}; \
+    fi
+
 # --no-root declares not to install the project package since we're wanting to take advantage of caching dependency installation
 # and the project is copied in and installed after this step
 RUN poetry install --no-interaction --no-ansi --no-root
 
 # Copy in the rest of the source code and install local Nautobot plugin
+WORKDIR /source
 COPY . /source
+RUN cp /tmp/install/* /source/
 RUN poetry install --no-interaction --no-ansi
 
 COPY development/nautobot_config.py ${NAUTOBOT_ROOT}/nautobot_config.py
