--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nautobot-device-lifecycle-mgmt"
-version = "1.0.3"
+version = "1.1.0"
 description = "Manages device lifecycles for platforms and software."
 authors = ["Network to Code, LLC <opensource@networktocode.com>"]
 license = "Apache-2.0"
@@ -17,37 +17,33 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6.2"
-pycountry = "^20.7.3"
+python = "^3.7"
+pycountry = "^22.3.5"
 matplotlib = "^3.3.4"
-
-[tool.poetry.extras]
-nautobot = ["nautobot"]
+nautobot = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
-invoke = "^1.4.1"
-black = "^21.6b0"
-bandit = "^1.6.2"
-pylint = "^2.5.2"
-pylint-django = "~2.3.0"
-pydocstyle = "^5.0.2"
-flake8 = "^3.8.3"
-pytest-django = "^4.1.0"
-toml = "^0.10.2"
-sentry-sdk = "^1.0.0"
-django-debug-toolbar = "^3.2.1"
-coverage = "^5.5"
-django-extensions = "^3.1.3"
-ipython = "7.16.3"
-time-machine = "^2.4.0"
-yamllint = "^1.26.3"
-mysqlclient = "^2.0.3"
-python-dotenv = "^0.19.1"
-Markdown = "3.3.4"
+invoke = "*"
+black = "*"
+bandit = "*"
+pylint = "*"
+pylint-django = "*"
+pydocstyle = "*"
+flake8 = "*"
+pytest-django = "*"
+sentry-sdk = "*"
+django-debug-toolbar = "*"
+coverage = "*"
+django-extensions = "*"
+time-machine = "*"
+yamllint = "*"
+mysqlclient = "*"
+python-dotenv = "*"
+Markdown = "*"
 
 [tool.black]
 line-length = 120
-target-version = ['py37']
+target-version = ['py38']
 include = '\.pyi?$'
 exclude = '''
 (
@@ -71,6 +67,7 @@ exclude = '''
 [tool.pylint.master]
 # Include the pylint_django plugin to avoid spurious warnings about Django patterns
 load-plugins="pylint_django"
+ignore=["nautobot_device_lifecycle_mgmt/migrations"]
 
 [tool.pylint.basic]
 # No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
@@ -84,6 +81,7 @@ disable = """
     bad-continuation,
     duplicate-code,
     too-many-lines,
+    too-many-ancestors,
     """
 
 [tool.pylint.miscellaneous]
