--- a/development/dev.env
+++ b/development/dev.env
@@ -45,5 +45,5 @@ MYSQL_USER=nautobot
 MYSQL_ROOT_HOST=%
 
 # Extend timeouts for Celery processes
-export NAUTOBOT_CELERY_TASK_SOFT_TIME_LIMIT=21600
-export NAUTOBOT_CELERY_TASK_TIME_LIMIT=43200
+NAUTOBOT_CELERY_TASK_SOFT_TIME_LIMIT=21600
+NAUTOBOT_CELERY_TASK_TIME_LIMIT=43200
