--- a/development/docker-compose.dev.yml
+++ b/development/docker-compose.dev.yml
@@ -23,8 +23,7 @@ services:
     ports:
       - "8001:8080"
     volumes:
-      - "../docs:/source/docs:ro"
-      - "../mkdocs.yml:/source/mkdocs.yml:ro"
+      - "../:/source"
     image: "nautobot-device-lifecycle-mgmt/nautobot:${NAUTOBOT_VER}-py${PYTHON_VER}"
     healthcheck:
       disable: true
