Added .idea/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -197,7 +197,7 @@ $RECYCLE.BIN/
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea
+.idea/
 
 
 # Gradle and Maven with auto-import
