chore: Remove unnecessary apt packages

--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -42,9 +42,7 @@ RUN curl -sSL https://install.python-poetry.org | python3 - && \
 
 # # Uncomment the lines below if you are apt-installing any package.
 # RUN apt-get -y update && apt-get -y install \
-#     gcc \
-#     libmariadb-dev-compat \
-#     libmariadb-dev \
+#     libldap2-dev \
 #     && rm -rf /var/lib/apt/lists/*
 
 # --> Stop safe to modify section
