Updates dev env

--- a/development/creds.example.env
+++ b/development/creds.example.env
@@ -21,3 +21,4 @@ POSTGRES_PASSWORD=notverysecurepwd
 # Redis Credentials
 REDIS_PASSWORD=notverysecurepwd
 NAUTOBOT_REDIS_PASSWORD=${REDIS_PASSWORD}
+NAUTOBOT_LOG_LEVEL=DEBUG
