--- a/development/docker-compose.base.yml
+++ b/development/docker-compose.base.yml
@@ -29,7 +29,7 @@ services:
     entrypoint:
       - "sh"
       - "-c"  # this is to evaluate the $NAUTOBOT_LOG_LEVEL from the env
-      - "nautobot-server celery worker -l $$NAUTOBOT_LOG_LEVEL"  # $$ because of docker-compose
+      - "watchmedo auto-restart --directory './' --pattern '*.py' --recursive -- nautobot-server celery worker -l $$NAUTOBOT_LOG_LEVEL --events"
     depends_on:
       - "nautobot"
       - "redis"
