--- a/development/docker-compose.dev.yml
+++ b/development/docker-compose.dev.yml
@@ -10,6 +10,8 @@ services:
     volumes:
       - "./nautobot_config.py:/opt/nautobot/nautobot_config.py"
       - "../:/source"
+    healthcheck:
+      disable: true
   celery_worker:
     volumes:
       - "./nautobot_config.py:/opt/nautobot/nautobot_config.py"
