--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ python = "^3.7"
 pycountry = "^22.3.5"
 matplotlib = "^3.3.4"
 nautobot = "^1.5.14"
+mysqlclient = "^2.1.1"
 
 [tool.poetry.dev-dependencies]
 invoke = "*"
