changes to metric.py

--- a/development/dev.env
+++ b/development/dev.env
@@ -40,7 +40,7 @@ NAUTOBOT_DB_ENGINE=django.db.backends.postgresql
 NAUTOBOT_DB_PORT=5432
 # NAUTOBOT_DB_ENGINE=django.db.backends.mysql
 # NAUTOBOT_DB_PORT=3306
-SECRET_KEY=MYSECRet
+SECRET_KEY=changeme
 # Needed for Postgres should match the values for Nautobot above
 POSTGRES_DB=nautobot
 POSTGRES_USER=nautobot
