--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,7 @@ packages = [
 python = "^3.7"
 pycountry = "^22.3.5"
 matplotlib = "^3.3.4"
-nautobot = "^1.5.14"
-mysqlclient = "^2.1.1"
+nautobot = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 invoke = "*"
@@ -38,6 +37,7 @@ coverage = "*"
 django-extensions = "*"
 time-machine = "*"
 yamllint = "*"
+mysqlclient = "*"
 python-dotenv = "*"
 Markdown = "*"
 # Rendering docs to HTML
