Updates for linting.

--- a/development/docker-compose.base.yml
+++ b/development/docker-compose.base.yml
@@ -23,8 +23,7 @@ services:
         condition: "service_started"
       db:
         condition: "service_healthy"
-    <<: *nautobot-build
-    <<: *nautobot-base
+    <<: [*nautobot-build, *nautobot-base]
   celery_worker:
     entrypoint:
       - "sh"
