--- a/development/dev.env
+++ b/development/dev.env
@@ -2,7 +2,7 @@
 # DEV File: Store environment information. NOTE: Secrets NOT stored here!
 ################################################################################
 # Nautobot Configuration Environment Variables
-NAUTOBOT_ALLOWED_HOSTS=*
+ALLOWED_HOSTS=*
 BANNER_TOP="Local"
 NAUTOBOT_CHANGELOG_RETENTION=0
 NAUTOBOT_ROOT=/opt/nautobot
