--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ packages = [
 python = ">=3.8,<3.11"
 pycountry = "^22.3.5"
 matplotlib = "^3.3.4"
-nautobot = "2.0.0b2"
+nautobot = "2.0.0-rc1"
 drf-spectacular = "0.26.3"
 
 [tool.poetry.dev-dependencies]
