--- a/development/dev.env
+++ b/development/dev.env
@@ -46,3 +46,6 @@ POSTGRES_HOST=postgres
 MYSQL_DATABASE=nautobot
 MYSQL_USER=nautobot
 MYSQL_ROOT_HOST=%
+
+# Workaround for coverage not being able to write to /source
+COVERAGE_FILE=/cov/.coverage
