--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ packages = [
 python = ">=3.8,<3.11"
 pycountry = "^22.3.5"
 matplotlib = "^3.3.4"
+#nautobot = "2.0.0b2"
 nautobot = "2.0.0-rc1"
 drf-spectacular = "0.26.3"
 
@@ -50,7 +51,8 @@ mkdocs-version-annotations = "1.0.0"
 # Automatic documentation from sources, for MkDocs
 mkdocstrings = "0.19"
 mkdocstrings-python = "0.7.1"
-pylint-nautobot = "^0.1.0"
+# pylint-nautobot = "*"
+pylint-nautobot = { git = "https://github.com/nautobot/pylint-nautobot.git", branch = "develop" }
 
 [tool.poetry.group.dev.dependencies]
 toml = "^0.10.2"
