--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -6,16 +6,13 @@
 # -------------------------------------------------------------------------------------
 # !!! USE CAUTION WHEN MODIFYING LINES BELOW
 
-# Accepts a desired Nautobot version as build argument, default to 1.4
+# Accepts a desired Nautobot version as build argument, default to 2.0.0-rc.2
 ARG NAUTOBOT_VER="2.0.0-rc.2"
 
-# Accepts a desired Python version as build argument, default to 3.8
+# Accepts a desired Python version as build argument, default to 3.10
 ARG PYTHON_VER="3.10"
 
 # Retrieve published development image of Nautobot base which should include most CI dependencies
-# FROM ghcr.io/nautobot/nautobot-dev:${NAUTOBOT_VER}-py${PYTHON_VER}
-
-# This needs to be reverted once we release
 FROM ghcr.io/nautobot/nautobot-dev:${NAUTOBOT_VER}-py${PYTHON_VER}
 
 # Runtime argument and environment setup
