--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -6,8 +6,8 @@
 # -------------------------------------------------------------------------------------
 # !!! USE CAUTION WHEN MODIFYING LINES BELOW
 
-# Accepts a desired Nautobot version as build argument, default to 2.0.0-rc.2
-ARG NAUTOBOT_VER="2.0.0-rc.2"
+# Accepts a desired Nautobot version as build argument, default to 2.0.0
+ARG NAUTOBOT_VER="2.0.0"
 
 # Accepts a desired Python version as build argument, default to 3.10
 ARG PYTHON_VER="3.10"
@@ -32,7 +32,7 @@ RUN curl -sSL https://install.python-poetry.org | python3 - && \
 # !!! USE CAUTION WHEN MODIFYING LINES ABOVE
 # -------------------------------------------------------------------------------------
 # App-specifc system build/test dependencies.
-# 
+#
 # Example: LDAP requires `libldap2-dev` to be apt-installed before the Python package.
 # -------------------------------------------------------------------------------------
 # --> Start safe to modify section
