--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nautobot-device-lifecycle-mgmt"
-version = "2.0.0a0"
+version = "2.0.0"
 description = "Manages device lifecycles for platforms and software."
 authors = ["Network to Code, LLC <opensource@networktocode.com>"]
 license = "Apache-2.0"
@@ -20,7 +20,7 @@ packages = [
 python = ">=3.8,<3.12"
 pycountry = "^22.3.5"
 matplotlib = "^3.3.4"
-nautobot = ">=2.0.0rc1,<2.0.0rc99"
+nautobot = "^2.0.0"
 drf-spectacular = "0.26.3"
 
 [tool.poetry.dev-dependencies]
