--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,20 +8,14 @@ readme = "README.md"
 homepage = "https://github.com/nautobot/nautobot-plugin-device-lifecycle-mgmt"
 repository = "https://github.com/nautobot/nautobot-plugin-device-lifecycle-mgmt"
 keywords = ["nautobot", "nautobot-plugin"]
-include = [
-    "LICENSE",
-    "README.md",
-]
-packages = [
-    { include = "nautobot_device_lifecycle_mgmt" },
-]
+include = ["LICENSE", "README.md"]
+packages = [{ include = "nautobot_device_lifecycle_mgmt" }]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
 pycountry = "^22.3.5"
 matplotlib = "^3.3.4"
 nautobot = "^2.0.0"
-drf-spectacular = "0.26.3"
 
 [tool.poetry.dev-dependencies]
 invoke = "*"
@@ -81,12 +75,16 @@ exclude = '''
 
 [tool.pylint.master]
 # Include the pylint_django plugin to avoid spurious warnings about Django patterns
-load-plugins=["pylint_django", "pylint_nautobot", "pylint.extensions.no_self_use"]
-ignore=["nautobot_device_lifecycle_mgmt/migrations"]
+load-plugins = [
+    "pylint_django",
+    "pylint_nautobot",
+    "pylint.extensions.no_self_use",
+]
+ignore = ["nautobot_device_lifecycle_mgmt/migrations"]
 
 [tool.pylint.basic]
 # No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
-no-docstring-rgx="^(_|test_|Meta$)"
+no-docstring-rgx = "^(_|test_|Meta$)"
 
 [tool.pylint.messages_control]
 # Line length is enforced by Black, so pylint doesn't need to check it.
@@ -106,9 +104,7 @@ notes = """,
     XXX,
     """
 [tool.pylint-nautobot]
-supported_nautobot_versions = [
-    "2"
-]
+supported_nautobot_versions = ["2"]
 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
