--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,6 @@
 mkdocs==1.3.1
-mkdocs-material==8.3.0
+mkdocs-material==8.4.2
 mkdocstrings==0.19
 mkdocstrings-python==0.7.1
 mkdocs-version-annotations==1.0.0
+mkdocs-include-markdown-plugin==3.9.1
