--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,15 +35,15 @@ yamllint = "*"
 mysqlclient = "*"
 python-dotenv = "*"
 Markdown = "*"
-# Rendering docs to HTML
-mkdocs = "1.3.1"
-# Material for MkDocs theme
-mkdocs-material = "8.3.0"
+mkdocs = "~1.4.3"
+# Material for mkdocs theme
+mkdocs-material = "~9.1.18"
 # Render custom markdown for version added/changed/remove notes
 mkdocs-version-annotations = "1.0.0"
 # Automatic documentation from sources, for MkDocs
-mkdocstrings = "0.19"
-mkdocstrings-python = "0.7.1"
+mkdocstrings = "~0.22.0"
+# Python-specific extension to mkdocstrings
+mkdocstrings-python = "~1.3.0"
 pylint-nautobot = "*"
 
 [tool.poetry.group.dev.dependencies]
