--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,7 +81,7 @@ markdown_extensions:
   - "footnotes"
 plugins:
   - "search"
-  - include-markdown
+  - "include-markdown"
   - "mkdocs-version-annotations"
   - "mkdocstrings":
       default_handler: "python"
