--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ yamllint = "*"
 mysqlclient = "*"
 python-dotenv = "*"
 Markdown = "*"
-mkdocs = "~1.4.3"
+mkdocs = "1.4.3"
 # Material for mkdocs theme
 mkdocs-material = "~9.1.18"
 # Render custom markdown for version added/changed/remove notes
