--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ mkdocs-version-annotations = "1.0.0"
 mkdocstrings = "~0.22.0"
 # Python-specific extension to mkdocstrings
 mkdocstrings-python = "~1.3.0"
+mkdocs-include-markdown-plugin = "3.9.1"
 pylint-nautobot = "*"
 
 [tool.poetry.group.dev.dependencies]
