--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "nautobot-device-lifecycle-mgmt"
-version = "0.1.0"
-description = "Device Lifecycle Management"
+version = "2.0.0"
+description = "Manages device lifecycles for platforms and software."
 authors = ["Network to Code, LLC <info@networktocode.com>"]
 license = "Apache-2.0"
 readme = "README.md"
@@ -28,6 +28,8 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
 # Used for local development
+pycountry = "^22.3.5"
+matplotlib = "^3.3.4"
 nautobot = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -54,6 +56,8 @@ mkdocs-version-annotations = "1.0.0"
 # Automatic documentation from sources, for MkDocs
 mkdocstrings = "0.22.0"
 mkdocstrings-python = "1.5.2"
+sentry-sdk = "*"
+time-machine = "*"
 
 [tool.black]
 line-length = 120
@@ -80,8 +84,15 @@ exclude = '''
 
 [tool.pylint.master]
 # Include the pylint_django plugin to avoid spurious warnings about Django patterns
-load-plugins="pylint_django, pylint_nautobot"
-ignore=".venv"
+load-plugins = [
+    "pylint_django",
+    "pylint_nautobot",
+    "pylint.extensions.no_self_use",
+]
+ignore = [
+    "nautobot_device_lifecycle_mgmt/migrations",
+    ".venv",
+]
 
 [tool.pylint.basic]
 # No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
@@ -90,8 +101,12 @@ no-docstring-rgx="^(_|test_|Meta$)"
 [tool.pylint.messages_control]
 # Line length is enforced by Black, so pylint doesn't need to check it.
 # Pylint and Black disagree about how to format multi-line arrays; Black wins.
-disable = """,
-    line-too-long
+disable = """
+    line-too-long,
+    duplicate-code,
+    too-few-public-methods,
+    too-many-lines,
+    too-many-ancestors,
     """
 
 [tool.pylint.miscellaneous]
