Updates max field length for LTM release.

--- a/development/dev.env
+++ b/development/dev.env
@@ -22,6 +22,8 @@ NAUTOBOT_MAX_PAGE_SIZE=0
 REDIS_HOST=redis
 NAUTOBOT_REDIS_HOST=${REDIS_HOST}
 NAUTOBOT_REDIS_PORT=6379
+REDIS_PASSWORD=redis
+SECRET_KEY=secret
 # Uncomment NAUTOBOT_REDIS_SSL if using SSL
 # NAUTOBOT_REDIS_SSL=True
 
