--- a/pyproject.toml
+++ b/pyproject.toml
@@ -164,7 +164,7 @@ ignore = [
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "nautobot_device_lifecycle_mgmt/migrations/*" = [
     "D",  # pydocstyle
 ]
