--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,6 @@ matplotlib = "^3.3.4"
 nautobot = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
-bandit = "*"
 coverage = "*"
 django-debug-toolbar = "*"
 invoke = "*"
@@ -83,7 +82,9 @@ no-docstring-rgx="^(_|test_|Meta$)"
 
 [tool.pylint.messages_control]
 disable = """,
-    line-too-long
+    line-too-long,
+    too-few-public-methods,
+    too-many-ancestors
 """
 
 [tool.pylint.miscellaneous]
@@ -106,7 +107,6 @@ target-version = "py38"
 select = [
     "D",  # pydocstyle
     "F", "E", "W",  # flake8
-    "PL",  # pylint
     "S",  # bandit
     "I",  # isort
 ]
