Add Support for Python 3.12 (#367)
* build: ⬆️ Update project to support py3.12

* docs: 📝 Add changelog snippet

* build: 📌 Pin djang-debug-toolbar to less than 4.4.

This fixes the index_together error thrown in CI.

* docs: 📝 Change snippet to added and reword message.

* refactor: Add remaining updates from py3.12 cookie

* build: ⬆️ Change python to less than 3.13

* ci: 💚 Change python version to 3.11 for tests with 2.0.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 packages = [
     { include = "nautobot_device_lifecycle_mgmt" },
@@ -27,7 +28,7 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
+python = ">=3.8,<3.13"
 # Used for local development
 pycountry = "^22.3.5"
 matplotlib = "^3.3.4"
@@ -35,7 +36,7 @@ nautobot = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "*"
-django-debug-toolbar = "*"
+django-debug-toolbar = "<4.4"
 invoke = "*"
 ipython = "*"
 pylint = "*"
